update URL for "Internships" section in navigation menu

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: "/#-educations"
 
   - title: "Internships"
-    url: "/#-internships"
+    url: "/#-internship experience"
 
   - title: "Hobbies"
     url: "/#-hobbies"
