--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: "/#-publications"
 
   - title: "Projects"
-    url: "/#-projects"
+    url: "/#-other projects"
 
   - title: "Educations"
     url: "/#-educations"
